--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: tasks
+#
+#  id         :integer          not null, primary key
+#  content    :text             not null
+#  parent_id  :integer
+#  author_id  :integer          not null
+#  completed  :boolean          default(FALSE)
+#  children   :integer          default([]), is an Array
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
